scroll stuck issue resolved

--- a/style.css
+++ b/style.css
@@ -12,10 +12,29 @@
   box-sizing: border-box;
 }
 
+html.lenis, html.lenis body {
+  height: auto;
+}
+
+.lenis.lenis-smooth {
+  scroll-behavior: auto !important;
+}
+
+.lenis.lenis-smooth [data-lenis-prevent] {
+  overscroll-behavior: contain;
+}
+
+.lenis.lenis-stopped {
+  overflow: hidden;
+}
+
+.lenis.lenis-smooth iframe {
+  pointer-events: none;
+}
+
 html,
 body,
 #app {
-  height: 100%;
   width: 100%;
   color: ghostwhite;
 }
@@ -81,13 +100,15 @@ body,
   background: linear-gradient(40deg, #0e1010, var(--color-bg2));
   top: 0;
   left: 0;
+  
 
   .bg-overlay{
     position: absolute;
     width: 100%;
     height: 100%;
     z-index: 3;
-    opacity: .4;
+    opacity: .3;
+    filter: contrast(.2) grayscale(.5);
     background-image: url(/noise.png);
   }
 
@@ -218,7 +239,7 @@ header {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 100%;
+  height: 100vh;
   padding: 1.5% 4% 0.8% 4%;
 }
 
